[package]
name = "otc_trades"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "otc_trades"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang ={version="0.29.0",  features = ["init-if-needed"]}
solana-program = "=1.18.0"
chrono = "0.4.15"
aead = "0.4.0"
bellman = "0.14.0"
clockwork-sdk = "2.0.17"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
arrayref = "0.3.7"
pubkey = "1.4.0"
